<resources>
    <string name="app_name">Delivery Masr</string>

    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="create_account"><u>Or Create My Account</u></string>
    <string name="title_activity_set_location">set_Location</string>
    <string name="title_activity_restaurant_home">Restaurant_home</string>
    <string name="en">ar</string>
    <string name="login">Login</string>
    <string name="add_your_details_to_login">Add your details to login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signout">SignOut</string>
    <string name="language">language</string>
    <string name="orders">Orders</string>
    <string name="delivery">Delivery</string>
    <string name="search_for_dlivery">Search for Dlivery</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="egp">EGP</string>
    <string name="done">Done</string>
    <string name="location_">Location :</string>
    <string name="price_">Price :</string>
    <string name="delete">delete</string>
    <string name="restaurants">Restaurants</string>
    <string name="profile">Profile</string>
    <string name="phone">phone :</string>
    <string name="delete_order">delete order</string>
    <string name="phone_number">phone number</string>
    <string name="phone_">phone </string>
    <string name="notifications_enabled">Notifications enabled.</string>
    <string name="new_order">New Order</string>
    <string name="customer_evaluation">Customer Evaluation</string>
    <string name="title_activity_manger_home">Manger_home</string>
    <string name="freelance">Freelance</string>
    <string name="name">Name</string>
    <string name="shift">Shift</string>
    <string name="control">control</string>
    <string name="open_shift">open shift</string>
    <string name="close_shift">close shift</string>


</resources>