<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ahmed"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/number"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:text="@string/phone"
            android:paddingHorizontal="30dp"
            android:gravity="start" />

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="01016942432"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:autoLink="phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/new_button"
            android:padding="10dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/new_button"
            android:padding="10dp"
            android:text="@string/delete_order"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>