<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#E8F5E9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/icon_acoount"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iconname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titlename"

            />

        <TextView
            android:id="@+id/titlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/name"
            android:textColor="#80000000"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/image_profile" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/titlename"
            tools:text="abdullah" />

        <ImageView
            android:id="@+id/iconnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="@id/number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titlenumber" />

        <TextView
            android:id="@+id/titlenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/phone_"
            android:textColor="#80000000"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/titlenumber"
            tools:text="01016942432" />

        <ImageView
            android:id="@+id/iconjob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/electric_moped"
            app:layout_constraintBottom_toBottomOf="@id/job"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titlejob" />

        <TextView
            android:id="@+id/titlejob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/shift"
            android:textColor="#80000000"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/number" />

        <TextView
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/iconname"
            app:layout_constraintTop_toBottomOf="@+id/titlejob"
            tools:text="@string/freelance" />

        <Switch
            android:id="@+id/control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/lock_open"
            android:drawablePadding="15dp"
            android:text="@string/control"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/open_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/open_shift"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/control"
            />

        <Button
            android:id="@+id/close_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/close_shift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/control" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/open_shift" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/image_profile"
            app:layout_constraintRight_toRightOf="@id/image_profile"
            android:src="@drawable/circle_online"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>